# Reactor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CompressorCore.cpp  CompressorCore.h  GainComputer.cpp  GainComputer.h  HeatSink.cpp  HeatSink.h  LevelDetector.cpp  LevelDetector.h  SidechainFilter.cpp  SidechainFilter.h
Source/UI/: CoreMaterialSwitch.cpp  CoreMaterialSwitch.h  CriticalityMeter.cpp  CriticalityMeter.h  LevelMeter.h  PresetSelector.h  ReactorLookAndFeel.cpp  ReactorLookAndFeel.h  ResponseDensityKnob.cpp  ResponseDensityKnob.h
Source/Utils/: Parameters.cpp  Parameters.h  PresetManager.cpp  PresetManager.h
